--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,37 @@
 {
-    "name": "openid/php-openid",
-    "version": "2.2.2",
-    "description": "OpenID library for PHP5",
-    "keywords": ["openid", "authentication", "yadis", "auth"],
-    "license": "Apache-2.0",
-    "homepage": "http://github.com/openid/php-openid",
-    "authors": [
-        {
-            "name": "JanRain Inc.",
-            "homepage": "http://www.openidenabled.com"
-        }
-    ],
-    "require": {
-        "php": ">=4.3",
-        "ext-gmp": "*",
-        "ext-curl": "*",
-        "ext-dom": "*"
-    },
-    "autoload": {
-        "classmap": ["Auth"]
-    },
-    "include-path": ["."]
+	"name" : "openid/php-openid",
+	"description" : "OpenID library for PHP5",
+	"version" : "2.2.2",
+	"authors" : [{
+			"name" : "JanRain Inc.",
+			"homepage" : "http://www.openidenabled.com"
+		}
+	],
+	"keywords" : [
+		"openid",
+		"authentication",
+		"yadis",
+		"auth"
+	],
+	"homepage" : "http://github.com/openid/php-openid",
+	"license" : [
+		"Apache-2.0"
+	],
+	"require" : {
+		"ext-curl" : "*",
+		"ext-dom" : "*",
+		"php" : ">=4.3",
+		"ext-gmp" : "*"
+	},
+	"autoload" : {
+		"classmap" : [
+			"Auth"
+		],
+		"files" : [
+			"autoload.php"
+		]
+	},
+	"include-path" : [
+		"."
+	]
 }
